@@ -180,6 +180,18 @@ name|callable
 init|=
 literal|null
 decl_stmt|;
+name|int
+name|rows
+init|=
+name|configuration
+operator|.
+name|getInt
+argument_list|(
+literal|"hbase.meta.scanner.caching"
+argument_list|,
+literal|100
+argument_list|)
+decl_stmt|;
 do|do
 block|{
 name|Scan
@@ -218,13 +230,18 @@ argument_list|)
 expr_stmt|;
 try|try
 block|{
-name|Result
-name|r
-init|=
-literal|null
-decl_stmt|;
+name|callable
+operator|.
+name|setCaching
+argument_list|(
+name|rows
+argument_list|)
+expr_stmt|;
+name|done
+label|:
 do|do
 block|{
+comment|//we have all the rows here
 name|Result
 index|[]
 name|rrs
@@ -259,24 +276,51 @@ operator|==
 literal|0
 condition|)
 block|{
-break|break;
+break|break
+name|done
+break|;
+comment|//exit completely
 block|}
-name|r
-operator|=
-name|rrs
-index|[
+for|for
+control|(
+name|int
+name|i
+init|=
 literal|0
-index|]
-expr_stmt|;
-block|}
-do|while
+init|;
+name|i
+operator|<
+name|rrs
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
 condition|(
+operator|!
 name|visitor
 operator|.
 name|processRow
 argument_list|(
-name|r
+name|rrs
+index|[
+name|i
+index|]
 argument_list|)
+condition|)
+break|break
+name|done
+break|;
+comment|//exit completely
+block|}
+comment|//here, we didn't break anywhere. Check if we have more rows
+block|}
+do|while
+condition|(
+literal|true
 condition|)
 do|;
 comment|// Advance the startRow to the end key of the current region
